Portfolio terminadp, falta la parte de JS. Index y portfolio 100% responsive.

--- a/Style/style.css
+++ b/Style/style.css
@@ -13,7 +13,8 @@
     --casiNegro: rgba(35, 35, 35);
     --temaVerdeHover: rgb(225, 23, 68);
     --temaRosa: rgb(225, 23, 68);
-    --temaVerdeTransparente: rgb(16, 228, 204,30%);
+    --temaVerdeTransparente: rgb(16, 228, 204,70%);
+    --temaVerdeFondo: rgb(207, 249, 245,100%);
 }
 html{
     scroll-behavior: smooth;
@@ -37,35 +38,94 @@ body::-webkit-scrollbar-thumb:hover{
 }
 /* Colocar las media querys como variables para ahorrar código */
 
+/* bOTONES */
+.btn-verde{
+    background-color: var(--temaVerde) ;
+    color: black;
+    font-size: 1.2rem;
+    font-weight:600;
+    padding: 0.5em;
+    border-radius: 0.63rem;
+    border: none;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25) ;
+    text-shadow: none;
+}
+.btn-verde:hover{
+    
+    transition: 0.5s ease-in-out;
+    background-color: var(--temaRosa);
+    color: var(--casiBlanco);
+}
+.btn-rosa{
+    background-color: var(--temaRosa) ;
+    color: var(--casiBlanco);
+    font-size: 1.2rem;
+    font-weight:600;
+    padding: 0.5em;
+    border-radius: 0.63rem;
+    border: none;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25) ;
+    text-shadow: none;
+}
+.btn-rosa:hover{
+    
+    transition: 0.5s ease-in-out;
+    background-color: var(--temaVerde);
+    color: var(--casiNegro);
+}
+
+/* fOOTER */
 .delFooter1{
     position: absolute;
-    right:3rem;
+    right:5rem;
     margin-top: -4rem;
 }
 .delFooter{
     position: absolute;
-    right:3rem;
-    margin-top: 0rem;
+    right:5rem;
+    margin-top: 1.5rem;
 }
 footer{
     text-align: center;
-    height: 250px;
+    height: 15.5rem;
     background: var(--casiNegro);
 }
 footer p{
     position: relative;;
-    bottom: -50%;
+    bottom: -6.25rem;
     color: var(--casiBlanco);
     font-weight:lighter;
     font-size: 0.8rem;
 }
-body{
-    background-color: whitesmoke;
-    /* font-size: 16px; */
+.iconos{
+    padding-top: 3rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    gap: 1rem;
+
 }
+.iconos img{
+    width: 4rem;
+    height: 4rem;
+    /* filter: drop-shadow(-2px 0px 8px var(--temaVerdeTransparente)); */
+}
+.iconos a{
+    background-color:transparent;
+}
+.iconos a img:hover{
+    height: 5rem;
+    width: 5rem;
+    transition: 0.5s ease-in-out;
+    filter: drop-shadow(-2px 0px 8px var(--temaVerde));
+}
+
+/* HEADER */
 header{
     width: 100%;
-    height: 100px;
+    height: 6.25rem;
 }
 .logo{
     color:var(--temaVerde);
@@ -74,21 +134,26 @@ header{
     justify-content: space-between;
     align-content: center;
     align-items: center;
-    gap: 1em;
-    font-size: 1.25em;
+}
+.logo a{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+    gap: 1.25rem;
 }
 .logo h2{
+    color:var(--temaVerde);
     font-weight:600;
     padding-bottom: 2%;
+    font-size: 1.875rem;
 }
 .btn-menu{
     background-color: transparent;
     border: none;
-    /* width: 40px;
-    height: 40px; */
-    /* border-radius: 5px; */
     color: var(--temaVerde);
-    font-size: 25px;
+    font-size: 32px;
     display: none;
 }
 .enlaces{
@@ -99,9 +164,31 @@ header{
     align-items: center;
     gap: 1em;
 }
+.enlaces .botonConBorde{
+    padding: .5em;
+    border: 1px solid var(--temaVerde);
+    border-radius: .625rem;
+}
+.enlaces a{
+    color: var(--temaVerde);
+    font-size: 1rem;
+    font-weight:lighter;
+    padding: .5em;
+    /* padding: 0px; */
+    border: px solid var(--temaVerde);
+    border-radius: .625rem;
+}
+.enlaces a:hover{
+    transition: 0.5s ease-in-out;
+    background-color: var(--temaVerdeTransparente);
+    color: var(--casiBlanco);
+}
+.enlaces .textoNegrita{
+    font-weight:700;
+}
 .encabezadoFijo{
     width: 100%;
-    height: 100px;
+    height: 6.25rem;
     padding: 3vh 5vw;
     background-color: var(--casiNegro);
     position: fixed;
@@ -114,19 +201,16 @@ header{
     gap: 1em;
     z-index: 1;
 }
-a{
-    color: var(--temaVerde);
-    font-size: 1em;
-    font-weight:lighter;
-}
-.textoNegrita{
-    font-weight:700;
-}
+
+/* ---estilos del body--- */
+
+/* Sección Presentación de la empresa */
+
 .presentacionEmpresa{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    gap: 80px;
+    gap: 5rem;
     box-shadow: 0px 6px 11px 5px rgba(0, 0, 0, 0.25);
     background-image: linear-gradient(rgba(94, 52, 52, 0.55),rgba(94, 52, 52, 0.55)), url(https://i.ibb.co/1KZ0s8S/img-Presentacion.jpg);
     background-repeat: no-repeat;
@@ -135,21 +219,28 @@ a{
     text-shadow: 0 0 8px rgb(0, 0, 0,0.8);
     font-size: 2.2rem;
     color:var(--casiBlanco) ;
-    padding-top: 210px;
-    padding-bottom: 150px;
+    padding-top: 11.1rem;
+    padding-bottom: 9.3rem;
     text-align:center ;
-    
 }
 .presentacionEmpresa p{
     line-height: 2;
     font-size: 1.5rem;
     font-weight:normal;
 }
+.presentacionEmpresa h2{
+    font-size: 2rem;
+    font-weight:bold;
+}
+
+
+/* Sección nosotros */
+
 .nosotros h3{
     position: relative;
     margin-left: 7vw;
     font-weight:bold;
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-top: 5rem;
     padding: 2rem;
     color: rgba(7, 47, 105,1);
@@ -169,67 +260,6 @@ a{
     position: relative;
     margin-left: 40vw;
 }
-.imgPresentacion{
-    width: 100%;
-}
-.btn-verde{
-    background-color: var(--temaVerde) ;
-    color: black;
-    font-size: 1rem;
-    font-weight:600;
-    padding: 10px;
-    border-radius: 10px;
-    border: none;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25) ;
-    text-shadow: none;
-}
-.btn-verde:hover{
-    
-    transition: 0.5s ease-in-out;
-    background-color: var(--temaRosa);
-    color: var(--casiBlanco);
-}
-.btn-rosa{
-    background-color: var(--temaRosa) ;
-    color: var(--casiBlanco);
-    font-size: 1rem;
-    font-weight:600;
-    padding: 10px;
-    border-radius: 10px;
-    border: none;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25) ;
-    text-shadow: none;
-}
-.btn-rosa:hover{
-    
-    transition: 0.5s ease-in-out;
-    background-color: var(--temaVerde);
-    color: var(--casiNegro);
-}
-.botonConBorde{
-    padding: 6px;
-    border: 1px solid var(--temaVerde);
-    border-radius: 10px;
-}
-.enlaces a{
-    padding: 7px;
-}
-a{
-    padding: 0px;
-    border: px solid var(--temaVerde);
-    border-radius: 10px;
-}
-.sobresalir :hover{
-    height: 55%;
-    transition: 0.5s ease-in-out;
-    border: 2px solid var(--casiBlanco);
-    left: -5%;
-}
-a:hover{
-    transition: 0.5s ease-in-out;
-    background-color: var(--temaVerdeTransparente);
-    color: var(--casiBlanco);
-}
 .nosotros{
     display: flex;
     flex-wrap: wrap;
@@ -242,41 +272,30 @@ a:hover{
     background-position: center center;
     background-size: cover;
     color:var(--casiBlanco) ;
-    padding-bottom: 150px;
-}
-.seccionColaboradores{
-    font-size: 2rem;
-    background-color: var(--temaVerdeTransparente);
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content:center;
-    align-items: center;
-    align-content: center;
-    padding-bottom: 2rem;
+    padding-bottom: 9.4rem;
 }
 .seccionNosotros{
     font-size: 2rem;
-    background-color: var(--temaVerdeTransparente); 
+    background-color: var(--temaVerdeFondo); 
     font-size: 2.5rem;
     padding: 2rem;
     color: rgb(7, 47, 105);
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     text-align: center;   
 }
-.seccionSoluciones{
-    background: linear-gradient(rgba(241, 241, 241, 0.5),rgba(241, 241, 241, 0.5)),url(https://i.ibb.co/F8HywcY/img-Soluciones.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
+
+/* Sección colaboradores */
+
+.seccionColaboradores{
+    font-size: 2rem;
+    background-color: var(--temaVerdeFondo);
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content:center;
     align-items: center;
     align-content: center;
-    padding-bottom: 2rem;
-    box-shadow: 0px 6px 11px 5px rgba(0, 0, 0, 0.25);
+    padding-bottom: 4rem;
 }
 .tituloColaboradores{
     text-align: center;
@@ -298,33 +317,28 @@ a:hover{
     padding-bottom: 2rem;
     text-align:center ;
 }
-.leyendaMapas{
-    font-size: 1.5rem;
-    padding: 2rem;
-    color: rgb(7, 47, 105);
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
 .colaborador1{
-    height: 410px;
-    width: 21rem;
+    height: 33rem;
+    width: 25rem;
     background-color: var(--temaVerdeTransparente);
     box-shadow: -3px 3px 7px 3px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
+    border-radius: 1rem;
     color: var(--casiNegro);
+    
 }
 .colaborador2{
-    height: 410px;
-    width: 21rem;
+    height: 33rem;
+    width: 25rem;
     background-color:  rgba(245, 0, 87, 0.7);
     box-shadow: -3px 3px 7px 3px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
+    border-radius: 1rem;
 }
 .colaborador3{
-    height: 410px;
-    width: 21rem;
+    height: 33rem;
+    width: 25rem;
     background-color:  rgba(255, 193, 7, 0.7);
     box-shadow: -3px 3px 7px 3px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
+    border-radius: 1rem;
 }
 .imgColaborador1{
     
@@ -333,9 +347,9 @@ a:hover{
     background-position: center center;
     background-size: cover;
     width:100%;
-    height: 192px;
+    height: 15rem;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 15px;
+    border-radius: 1rem;
 }
 .imgColaborador2{
     background-image: url(https://i.ibb.co/4SsXNRb/Colaborador2.jpg);
@@ -344,9 +358,9 @@ a:hover{
     background-size: cover;
     
     width:100%;
-    height: 192px;
+    height: 15rem;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 15px;
+    border-radius: 1rem;
 }
 .imgColaborador3{
     background-image: url(https://i.ibb.co/rtN3ksH/Colaborador3.jpg);
@@ -354,9 +368,46 @@ a:hover{
     background-position: center center;
     background-size: cover;
     width:100%;
-    height: 192px;
+    height: 15rem;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 15px;
+    border-radius: 1rem;
+}
+.nombreColaborador{
+    font-style: normal;
+    font-weight: 800;
+    font-size: 1.5rem;
+}
+.aptitudesColaborador{
+    padding-top: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.2rem;
+    line-height: 2rem;
+}
+.sobresalir :hover{
+    height: 55%; 
+    transition: 0.5s ease-in-out;
+    border: 2px solid var(--casiBlanco);
+    left: -5%;
+}
+
+/* Sección soluciones */
+
+.seccionSoluciones{
+    background: linear-gradient(rgba(241, 241, 241, 0.5),rgba(241, 241, 241, 0.5)),url(https://i.ibb.co/F8HywcY/img-Soluciones.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    align-content: center;
+    padding-bottom: 4rem;
+    box-shadow: 0px 6px 11px 5px rgba(0, 0, 0, 0.25);
 }
 .imgSolucion1{
     
@@ -365,20 +416,19 @@ a:hover{
     background-position: center center;
     background-size: cover;
     width:100%;
-    height: 192px;
+    height: 15rem;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 15px;
+    border-radius: 1rem;
 }
 .imgSolucion2{
     background-image: url(https://i.ibb.co/VvXVyDV/solucion2.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    
     width:100%;
-    height: 192px;
+    height: 15rem;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 15px;
+    border-radius: 1rem;
 }
 .imgSolucion3{
     background-image: url(https://i.ibb.co/C0ZGCHq/solucion3.jpg);
@@ -386,12 +436,35 @@ a:hover{
     background-position: center center;
     background-size: cover;
     width:100%;
-    height: 192px;
+    height: 15rem;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 15px;
+    border-radius: 1rem;
+}
+.nombreSolucion{
+    font-style: normal;
+    font-weight: 800;
+    font-size: 1.5rem;
+}
+.descripcionSolucion{
+    padding-top: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.2rem;
+    line-height: 2rem;
+}
+
+/* Sección oficinas */
+
+.leyendaMapas{
+    font-size: 1.5rem;
+    padding: 2rem;
+    color: rgb(7, 47, 105);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .seccionOficinas{
-    background-color: var(--temaVerdeTransparente);
+    background-color: var(--temaVerdeFondo);
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -403,54 +476,15 @@ a:hover{
 iframe{
     border: 1px solid #000000;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 10px;
+    border-radius: 1rem;
 }
-.nombreColaborador{
-    font-style: normal;
-    font-weight: 800;
-    font-size: 1.2rem;
-    /* line-height: 22px;
-    padding-bottom: 2rem; */
-}
-.aptitudesColaborador{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 1rem;
-   /*  line-height: 19px; */
-}
-.iconos{
-    padding-top: 3rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    gap: 1rem;
-
-}
-.iconos img{
-    width: 40px;
-    height: 40px;
-    filter: drop-shadow(-2px 0px 8px var(--temaVerdeTransparente));
-}
-.iconos a{
-    background-color:transparent;
-}
-a img:hover{
-    height: 45px;
-    width: 45px;
-    transition: 0.5s ease-in-out;
-    filter: drop-shadow(-2px 0px 8px var(--temaVerde));
-}
-
-
 
 /* Media Querys */
 @media screen and (max-width: 1300px ){
-    header{
-        font-size: 12px;
+    html{
+        font-size: 75%;
     }
-    body{
+    header{
         font-size: 12px;
     }
     .favicon{
@@ -478,6 +512,9 @@ a img:hover{
     
 }
 @media screen and (max-width: 930px ){
+    html{
+        font-size: 63%;
+    }
     header{
         font-size: 10px;
     }
@@ -495,9 +532,9 @@ a img:hover{
     }
     .iconos{
         transition: 0.5s ease-in-out;
-        width: 15rem;
+        width: 30rem;
+        padding-left: 3rem;
         padding-top: 3rem;
-        gap: 0.2rem;
     }
     .encabezadoFijo{   
         transition: 0.5s ease-in-out;     
@@ -519,4 +556,3 @@ a img:hover{
         width: 300px;
     }
 }
-/* ----- Termina código css de Yair ----- */
