--- a/Style/stylePortfolio.css
+++ b/Style/stylePortfolio.css
@@ -35,9 +35,9 @@ body::-webkit-scrollbar-thumb:hover{
 .btn-verde{
     background-color: var(--temaVerde) ;
     color: black;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight:600;
-    padding: 0.63rem;
+    padding: 0.5em;
     border-radius: 0.63rem;
     border: none;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25) ;
@@ -52,9 +52,9 @@ body::-webkit-scrollbar-thumb:hover{
 .btn-rosa{
     background-color: var(--temaRosa) ;
     color: var(--casiBlanco);
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight:600;
-    padding: 0.63rem;
+    padding: 0.5em;
     border-radius: 0.63rem;
     border: none;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25) ;
@@ -70,12 +70,12 @@ body::-webkit-scrollbar-thumb:hover{
 /* fOOTER */
 .delFooter1{
     position: absolute;
-    right:5rem;
+    right:3rem;
     margin-top: -4rem;
 }
 .delFooter{
     position: absolute;
-    right:5rem;
+    right:3rem;
     margin-top: 1.5rem;
 }
 footer{
