se modifica ruta

--- a/Style/ContactStyle.css
+++ b/Style/ContactStyle.css
@@ -1,3 +1,14 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+}
+
+
 /* fOOTER */
 .delFooter1{
     position: absolute;
