--- a/FormStyle.css
+++ b/FormStyle.css
@@ -135,19 +135,40 @@ footer p{
 
 /* style del form 3 pasos :) */
 
-
-/* 
-body {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  gap: 5rem;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
+h1 {
+  text-align: center;
+  font-variant: small-caps;
+  font-size: 30px;
+  letter-spacing: 1px;
+  vertical-align: super;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
- */
-   
+
+.Pres {
+  display: flex;
+  flex-direction: row;
+  background-color: aliceblue;
+  
+  margin-top: 20px;
+  margin-right: 10px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  padding-top: 
+  padding-right: 
+  padding-bottom: 
+  padding-left:
+}
+.Urge {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(171, 171, 236);
+}
+ 
    
    /* Estilos para las pestañas */
   
